WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264019
Fix integer overflow in BitstreamReader::ReadBit called from H265SpsParser::ParseSpsInternal
https://bugs.webkit.org/show_bug.cgi?id=264019
Summary
Fix integer overflow in BitstreamReader::ReadBit called from H265SpsParser::P...
David Kilzer (:ddkilzer)
Reported
2023-10-31 20:14:51 PDT
Fix integer overflow in BitstreamReader::ReadBit() called from H265SpsParser::ParseSpsInternal(). <
rdar://117763685
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2023-10-31 20:43:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19815
EWS
Comment 2
2023-11-01 09:41:18 PDT
Committed
270062@main
(b05fd50ce4ab): <
https://commits.webkit.org/270062@main
> Reviewed commits have been landed. Closing PR #19815 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug