Cherry-pick b05fd50ce4ab. rdar://117763685

Fix integer overflow in BitstreamReader::ReadBit called from H265SpsParser::ParseSpsInternal
    https://bugs.webkit.org/show_bug.cgi?id=264019
    <rdar://117763685>

    Reviewed by Jer Noble.

    * Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_sps_parser.cc:
    (webrtc::H265SpsParser::ParseSpsInternal):
    - Cap maximum value of log2_max_pic_order_cnt_lsb_minus4 that is later
      passed to BitstreamReader::ConsumeBits() to prevent integer overflow.

    * Source/ThirdParty/libwebrtc/Source/webrtc/rtc_base/bitstream_reader.cc:
    (webrtc::BitstreamReader::ConsumeBits):
    - Add runtime check for (bits < 0) since this would have caught the
      issue sooner.

    * Source/ThirdParty/libwebrtc/WebKit/0001-Fix-integer-overflow-in-BitstreamReader-ReadBit-call.patch: Add.

    Canonical link: https://commits.webkit.org/270062@main

Identifier: 267815.511@safari-7617-branch